# ddPCM

./: README.md  docs.md  fpm.toml  index.html  meson.build  search.html
.github/workflows/: build.yml  docs.yml
config/: meson.build
example/: main.f90  meson.build
lists/: files.html  modules.html  procedures.html  types.html
module/: ddcosmo_core.html
proc/: adjrhs.html  calcv.html  cosmo.html  dbasis.html  ddinit.html  ddmkxi.html  ddmkzeta.html  dfsw.html  diis.html  efld.html  fdoga.html  fdoka.html  fdokb.html  forces_dd.html  fsw.html  gen_oh.html  gjinv.html  header.html  hnorm.html  hsnorm.html  intmlp.html  intrhs.html  jacobi_diis.html  ld0006.html  ld0014.html  ld0026.html  ld0038.html  ld0050.html  ld0074.html  ld0086.html  ld0110.html  ld0146.html  ld0170.html  ld0194.html  ld0230.html  ld0266.html  ld0302.html  ld0350.html  ld0434.html  ld0590.html  (+30 more)
sourcefile/: cosmo.f90.html  ddcosmo.f90.html  efld.f90.html  forces_dd.f90.html  jacobi_diis.f90.html  llgnew.f.html  matvec.f90.html  mkrhs.f90.html
src/: cosmo.f90  ddcosmo.f90  efld.f90  forces_dd.f90  jacobi_diis.f90  matvec.f90  meson.build  mkrhs.f90
tipuesearch/: tipuesearch_content.js
type/: tddcosmo.html
